# aiida-plugin-cutter

./: .gitignore  .travis.yml  README.md  check-syntax.sh  cookiecutter.json  requirements.txt  tox.ini  update-aiida-diff.sh  update-template-formatting.sh
.github/workflows/: ci.yml
.travis-data/: install_aiida_github.sh  script.sh
hooks/: post_gen_project.py  post_gen_project.sh
{{cookiecutter.plugin_name}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  LICENSE  README.md  azure-pipelines.yml  conftest.py  manage.py  pyproject.toml  pytest.ini  setup.json  setup.py
{{cookiecutter.plugin_name}}/.ci/azure-templates/: apt-steps.yml  conda-steps.yml  pip-steps.yml
{{cookiecutter.plugin_name}}/.github/: check_version.py
{{cookiecutter.plugin_name}}/.github/workflows/: ci.yml  publish-on-pypi.yml
{{cookiecutter.plugin_name}}/.travis-data/: check_version.py  install_aiida_github.sh
{{cookiecutter.plugin_name}}/docs/: requirements_for_rtd.txt
{{cookiecutter.plugin_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.plugin_name}}/docs/source/developer_guide/: index.rst
{{cookiecutter.plugin_name}}/docs/source/module_guide/: calculations.rst  data.rst  index.rst  parsers.rst
{{cookiecutter.plugin_name}}/docs/source/user_guide/: get_started.rst
{{cookiecutter.plugin_name}}/examples/: cli.py  example_01.py  submit.py  test_submit.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/: __init__.py  calculations.py  cli.py  helpers.py  parsers.py
{{cookiecutter.plugin_name}}/src/{{cookiecutter.module_name}}/data/: __init__.py
{{cookiecutter.plugin_name}}/tests/: __init__.py  test_calculations.py  test_cli.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/: __init__.py  calculations.py  cli.py  code.py  helpers.py  parsers.py  utils.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/calculations/: multiply.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/data/: __init__.py  data_cli.py  diffparam.py  multiply.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/parsers/: multiply.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/tests/: __init__.py  test_calculations.py  test_cli.py  test_data.py
{{cookiecutter.plugin_name}}/{{cookiecutter.module_name}}/workflows/: __init__.py
